[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uos-json-diff"
version = "0.1.0"
description = "Cross-platform desktop JSON diff tool (PyQt6)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyQt6>=6.0.0",
]

[project.scripts]
uos-json-diff = "uos_json_diff_desktop_qt:main"

[tool.setuptools]
py-modules = [
  "uos_json_diff_desktop_qt",
  "jsondiff_engine",
  "diff_uos_common_v4",
]

